--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   <footer class="footer">
     <p>Un jardin cultivé en permacomputing, d'idées, notes et expériences.</p>
+    <p class="build-info">Dernière germination : 3 avril 2025</p>
   </footer>
 </main>
 
