deploy: ce31de0a544d4cda8ef0592dc6ebafebf24a1c0f

--- a/notes/.trash/labo/first-lab/index.html
+++ b/notes/.trash/labo/first-lab/index.html
@@ -14,7 +14,13 @@
 <main class="container">
   <div class="intro">
     <h1 view-transition-name="page-title">Ici le labo</h1>
-    <div class="note-date" view-transition-name="note-date">3 avril 2024</div>
+
+    <div class="note-data">
+      <div class="note-date" view-transition-name="note-date">3 avril 2024</div>
+      <div class="note-tags">
+        
+      </div>
+    </div>
   </div>
 
   <article class="note-content" view-transition-name="note-content">
