--- a/notes/et-encore-un-de-plus/index.html
+++ b/notes/et-encore-un-de-plus/index.html
@@ -14,7 +14,15 @@
 <main class="container">
   <div class="intro">
     <h1 view-transition-name="page-title">Encore une site</h1>
-    <div class="note-date" view-transition-name="note-date">3 avril 2025</div>
+
+    <div class="note-data">
+      <div class="note-date" view-transition-name="note-date">3 avril 2025</div>
+      <div class="note-tags">
+        
+          <span class="tag">flux</span>
+        
+      </div>
+    </div>
   </div>
 
   <article class="note-content" view-transition-name="note-content">
