--- a/notes/terre-fraiche/index.html
+++ b/notes/terre-fraiche/index.html
@@ -19,19 +19,76 @@
       <div class="note-date" view-transition-name="note-date">3 avril 2025</div>
       <div class="note-tags">
         
-          <span class="tag">flux</span>
+          <span class="tag">tech</span>
         
       </div>
     </div>
   </div>
 
   <article class="note-content" view-transition-name="note-content">
-    <p>Ce jardin prend doucement vie.
-Pas encore de fleurs, ni d’abeilles.</p>
-<p>Je rédige dans Obsidian, sur mon téléphone ou portable, et elles se synchronisent automatiquement avec GitHub grâce à l’app Git Sync.</p>
-<p>Ces notes vivent dans un dépôt Git à part, que j’ai lié à mon projet 11ty comme un submodule Git.</p>
-<p>À chaque push, une GitHub Action s’occupe de builder le site et de le déployer automatiquement sur jardin.ludique.dev.</p>
-<p>Ça semble presque magique.</p>
+    <p>Ce jardin numérique prend doucement vie
+Les fondations techniques sont posées, et il est prêt à accueillir ses premières pousses.</p>
+<p>La base technique (la “stack”):
+J’ai choisi un générateur de site statique appelé 11ty (ou Eleventy). Il est léger, rapide et simple à utiliser.
+Les contenus sont rédigés en Markdown, un format de texte très lisible et facile à apprendre.</p>
+<p>Une rédaction simplifié :
+Pour rédiger, j’utilise Obsidian, un éditeur de notes avec app mobile desktop. Il est populaire, personnalisable, et surtout :
+– Il comprend le frontmatter (des métadonnées en haut des fichiers) utilisé par 11ty,
+– Il permet de travailler hors ligne, avec les fichiers stockés localement sur mes appareils.</p>
+<p>J’ai organisé mon projet en deux parties :
+Un dépôt Git pour le contenu (les notes),
+Un autre dépôt pour le site web (le code 11ty).
+Cela me permet de maintenir une séparation entre contenu et contenant.
+Chaque fois que je modifie mes notes, une GitHub Action s’enclenche :
+Elle clone le dépôt de notes,
+Intègre ces fichiers dans le projet 11ty,
+Génère le site à jour,
+Et le publie automatiquement sur jardin.ludique.dev.</p>
+<p>J’avais testé les Git submodules, mais j'ai rapidement rencontré des soucis de synchronisation.
+Avec cette nouvelle méthode, c'est plus fluide.
+Je pousse mes notes → GitHub fait le reste.</p>
+<hr>
+<p>Résultat ?
+Un processus automatisé, fiable, élégant.
+Presque magique.</p>
+<hr>
+<p>`+-------------------------+
+| 1. Édition des notes    |
+|    (Obsidian, local)    |
++-----------+-------------+
+|
+| git push
+v
++-----------+-------------+
+| 2. Dépôt GIT 'Contenu'  | ----+
+|    (GitHub)             |     | 3. Push -&gt; Déclenche notif.
++-------------------------+     |
+v
++-------------------------+ &lt;---+
+| 4. Dépôt GIT 'SSG'      |
+|    (Code 11ty, GitHub)  | ----+
+|    (Reçoit notif.)      |     | 5. Notif. -&gt; Déclenche Action
++-------------------------+     v
++---------+---------------+
+| 6. GitHub Action (SSG)  |
+|-------------------------|
+|  a. Clone Dépôt Contenu |
+|  b. Build (11ty)        |
+|  c. Deploy site         |
++---------+---------------+
+| 7. Déploiement vers...
+v
++---------+---------------+
+| 8. GitHub Pages         |
+| (jardin.ludique.dev)    |
++---------+---------------+
+| 9. Site accessible par...
+v
++---------+---------------+
+| Visiteur                |
++-------------------------+</p>
+<p>*Note: La notification est souvent gérée par une petite action sur le dépôt 'Contenu' qui en déclenche une plus grosse sur le dépôt 'SSG'.
+`</p>
 
   </article>
 
